--- a/ApiGateway.Presentation/appsettings.json
+++ b/ApiGateway.Presentation/appsettings.json
@@ -2,7 +2,8 @@
   "Logging": {
     "LogLevel": {
       "Default": "Debug",
-      "Microsoft.AspNetCore": "Debug"
+      "Microsoft.AspNetCore": "Warning",
+      "Ocelot": "Debug"
     }
   },
   "AllowedHosts": "*",
